# wobble-quant-cache

./: .gitignore  CITATION.cff  LICENSE  README.md  REVIEW-FEEDBACK.md  gemma4_hybrid_proxy.py  pyproject.toml  test_hybrid.py  test_modal.py
experiments/: calibration.py  reproduce_gemma2.py  reproduce_mistral.py  run_gemma4_hybrid.py
profiling/: __init__.py  capture.py  cli.py  distributions.py  heads.py  importance.py  report.py
results/: gemma2_2b.json  mistral_7b.json
wobble/: __init__.py  allocate.py  baselines.py  config.py  evaluate.py  hybrid.py  patch.py  quantize.py
