[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wobble-quant-cache"
version = "0.1.0"
description = "Adaptive per-dimension KV cache quantization for LLMs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "datasets>=2.16",
    "accelerate>=0.26",
]

[project.scripts]
wobble-profile = "profiling.cli:main"

[project.optional-dependencies]
eval = ["lm-eval>=0.4"]

[tool.setuptools.packages.find]
include = ["wobble*", "profiling*"]
